# PAR2LogReader

./: .gitignore  README.md  build.bat  configs.py  main.py  pyproject.toml
config/: main.json
res/: style.qss
src/config/: RegistryManager.py  configs.py
src/enums/: LogLevel.py
src/gui/: CentralWidget.py  Icon.py  ListWidget.py  LogTable.py  MainWindow.py  Splitter.py
src/gui/abstr/: Table.py
src/gui/inspector/: LogInspector.py  PropertiesTable.py  StackTraceWidget.py
src/gui/inspector/properties/: PropertiesRawTextWidget.py  PropertiesTabWidget.py  PropertiesTable.py
src/gui/inspector/stacktrace/: StackTraceParsedWidget.py  StackTraceTabWidget.py  StackTraceTable.py  StackTraceTextWidget.py
src/gui/widgets/: HeadingLabel.py  HeadingLabelWidget.py
src/io/: FileStreamWorker.py  FileStreamer.py
src/logs/: LogLine.py
